# github-workflow-test

./: CMakeLists.txt  main.cpp
.github/workflows/: ci.yml
